--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server:
   port: 8080
+  #考虑get请求头过大，而tomcat的header缓存区又过小
+  tomcat:
+    max-http-form-post-size: 81920
 spring:
   application:
     name: reggie_take_out
@@ -11,9 +14,13 @@ spring:
       password: 888888
 mybatis-plus:
   configuration:
-    #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射 ！！！
+    # 在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射 ！！！
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     db-config:
       id-type: ASSIGN_ID
+
+# 指定上传下载文件的缓存路径
+reggie:
+  path: D:\images\
